2006-03-16  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Import some Services:: funtions that we use here

2006-03-15  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Ok, now let's try in a non-stupid way.

2006-03-15  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm, Package.pm, Engine.pm: Attempt to fix some of dep engine
	weirdness. Now no more storing versionspecs inside Package objects, instead
	we store a list of ok versions in the deps table.

2006-03-14  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Do not issue repeated warnings about the same
	BuildDependsOnly violation

2006-03-06  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Fix *SetPATH handler

2006-03-01  Daniel Macks  <dmacks@netspace.org>

	* Status.pm: Don't whine if status db not yet loaded.

2006-03-01  Daniel Macks  <dmacks@netspace.org>

	* Status.pm: Instead of manually toggling _invalid, store data
	about dpkg status file when reading it, compare stored vs actual
	to determine whether cache is stale.
	* PkgVersion.pm, Status.pm: Abolish Status::invalidate

2006-02-28  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* SysState.pm:
		- Nicer error messages when resolving deps.
		- Don't accept "resolutions" that uninstall some of the packages that
		we are trying to install.
		- Recognize when buildlocks are in the way.
	* PkgVersion.pm: Don't print the "propagated at" for propagated die's.

2006-02-28  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Command.pm: When lchown is available, chowname_hr should affect links.
	There's no lchown in perl, so we system() it.

2006-02-26  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: get_aptdb was stomping on $_, which happened to be
	a Package object. Damn global variables...

2006-02-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Config.pm: Add methods to check whether the bindist is available, based
	on the current distribution and prefix.