@@ -1,3 +1,8 @@
+2006-03-17  Daniel Macks  <dmacks@netspace.org>
+
+	* PkgVersion.pm: Move BDO violation checking into its own method,
+	and remember to call it for splitoffs not just parents.
+
 2006-03-16  Daniel Macks  <dmacks@netspace.org>
 
 	* Config.pm: Import some Services:: funtions that we use here
